objects/ALTF__Account_Plan_Type__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AM_Custom_Tab_One_Label__c</fullName>
        <description>This is the Label which will appear in your first AM Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your first AM Custom Tab</inlineHelpText>
        <label>Tab One Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Custom_Tab_One_Src__c</fullName>
        <description>The Visualforce page which your first AM Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your first AM Custom Tab will show</inlineHelpText>
        <label>Tab One Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Custom_Tab_Three_Label__c</fullName>
        <description>This is the Label which will appear in your third AM Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your third AM Custom Tab</inlineHelpText>
        <label>Tab Three Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Custom_Tab_Three_Src__c</fullName>
        <description>The Visualforce page which your third AM Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your third AM Custom Tab will show</inlineHelpText>
        <label>Tab Three Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Custom_Tab_Two_Label__c</fullName>
        <description>This is the Label which will appear in your second AM Custom Tab</description>
        <inlineHelpText>This is the Label which will appear in your second AM Custom Tab</inlineHelpText>
        <label>Tab Two Label</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__AM_Custom_Tab_Two_Src__c</fullName>
        <description>The Visualforce page which your second AM Custom Tab will show</description>
        <inlineHelpText>The Visualforce page which your second AM Custom Tab will show</inlineHelpText>
        <label>Tab Two Src</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Tab_Name_List__c</fullName>
        <defaultValue>&quot;relationships,insights,potential,plandetails,objectives&quot;</defaultValue>
        <description>Select the names and order of the Altify Account Plan (Account level) Tabs. The value of this field should be a comma separated list of Tab names. Valid names are &apos;PlanDetails&apos;, &apos;Potential&apos;,  &apos;Objectives&apos;, &apos;Insights&apos;, &apos;Relationships&apos;.</description>
        <inlineHelpText>Select the names and order of the Altify Account Plan (Account level) Tabs. The value of this field should be a comma separated list of Tab names. Valid names are &apos;PlanDetails&apos;, &apos;Potential&apos;,  &apos;Objectives&apos;, &apos;Insights&apos;, &apos;Relationships&apos;</inlineHelpText>
        <label>Account Plan Tab Name List</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__ComparisionJSONFileName__c</fullName>
        <description>Contains file name</description>
        <label>ComparisionJSONFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Objectives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is deprecated and is no longer used.</description>
        <inlineHelpText>This field is deprecated and is no longer used.</inlineHelpText>
        <label>Disable Objectives (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Plan_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is deprecated and is no longer used.</description>
        <inlineHelpText>This field is deprecated and is no longer used.</inlineHelpText>
        <label>Disable Plan Details (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Potential_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Removes the potential opportunities from the specific plan type.</description>
        <inlineHelpText>Removes the potential opportunities from the specific plan type.</inlineHelpText>
        <label>Disable Potential Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Disable_Test_and_Improve__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is deprecated and is no longer used.</description>
        <inlineHelpText>This field is deprecated and is no longer used.</inlineHelpText>
        <label>Disable Test and Improve (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Inactive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>While this checkbox is selected, this plan type is unavailable in the Plan Type list when a user is creating a new account manager plan or accessing an account plan.</description>
        <inlineHelpText>While this checkbox is selected, this plan type is unavailable in the Plan Type list when a user is creating a new account plan.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Not in use</description>
        <inlineHelpText>Not in use</inlineHelpText>
        <label>Active (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Onboarding_URL_1__c</fullName>
        <inlineHelpText>Onboarding URL 1.</inlineHelpText>
        <label>Onboarding URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Onboarding_URL_2__c</fullName>
        <inlineHelpText>Onboarding URL 2.</inlineHelpText>
        <label>Onboarding URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Onboarding_URL_3__c</fullName>
        <inlineHelpText>Onboarding URL 3.</inlineHelpText>
        <label>Onboarding URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Order_No__c</fullName>
        <label>Order No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Tab_Name_List__c</fullName>
        <defaultValue>&quot;Overview, PlanDetails, OpportunityMap, Objectives, TestImprove&quot;</defaultValue>
        <description>Select the names and order of the Altify Account Manager (Plan level) Tabs. The value of this field should be a comma separated list of Tab names. Valid names are &apos;Overview&apos;, &apos;PlanDetails&apos;, &apos;OpportunityMap&apos;, &apos;Objectives&apos;, &apos;TestImprove&apos;, &apos;CustomTab1&apos;, &apos;CustomTab3&apos;, &apos;CustomTab3&apos;.</description>
        <inlineHelpText>Select the names and order of the Altify Tabs. The value of this field should be a comma separated list of Tab names. Valid names are &apos;Overview&apos;, &apos;PlanDetails&apos;, OpportunityMap&apos;, &apos;Objectives&apos;, &apos;TestImprove&apos;, &apos;CustomTab1&apos;, &apos;CustomTab2&apos;, &apos;CustomTab3&apos;.</inlineHelpText>
        <label>Account Manager Tab Name List</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary field that may be used in a patch scenario.</description>
        <inlineHelpText>Temporary field that may be used in a patch scenario.</inlineHelpText>
        <label>Temp1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Temp2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary field that may be used in a patch scenario.</description>
        <inlineHelpText>Temporary field that may be used in a patch scenario.</inlineHelpText>
        <label>Temp2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr1__c</fullName>
        <description>Temporary field that may be used in a patch scenario</description>
        <inlineHelpText>Temporary field that may be used in a patch scenario</inlineHelpText>
        <label>TempStr1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__TempStr2__c</fullName>
        <description>Temporary field that may be used in a patch scenario</description>
        <inlineHelpText>Temporary field that may be used in a patch scenario</inlineHelpText>
        <label>TempStr2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__URL_1__c</fullName>
        <inlineHelpText>Custom URL 1.</inlineHelpText>
        <label>URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__URL_2__c</fullName>
        <inlineHelpText>Custom URL 2.</inlineHelpText>
        <label>URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__URL_3__c</fullName>
        <inlineHelpText>Custom URL 3.</inlineHelpText>
        <label>URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__URL_Label_1__c</fullName>
        <label>Custom URL Label 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__URL_Label_2__c</fullName>
        <label>Custom URL Label 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__URL_Label_3__c</fullName>
        <label>Custom URL Label 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Altify AM Plan Type</label>
    <listViews>
        <fullName>ALTF__All</fullName>
        <columns>NAME</columns>
        <columns>ALTF__Tab_Name_List__c</columns>
        <columns>ALTF__Account_Tab_Name_List__c</columns>
        <columns>ALTF__Disable_Potential_Opportunities__c</columns>
        <columns>ALTF__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_AM_Plan_Types</fullName>
        <columns>NAME</columns>
        <columns>ALTF__Order_No__c</columns>
        <columns>ALTF__Tab_Name_List__c</columns>
        <columns>ALTF__Account_Tab_Name_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ALTF__Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Active AM Plan Types</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Plan Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify AM Plan Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ALTF__Plan_Type_Name_Maximum_Length_is_40_char</fullName>
        <active>true</active>
        <description>Plan Type Name Maximum Length is 40 chars</description>
        <errorConditionFormula>LEN(Name) &gt; 40</errorConditionFormula>
        <errorMessage>Plan Type Name Maximum Length is 40 chars</errorMessage>
    </validationRules>
</CustomObject>